Corrected spelling and edited writing up to tuning section. Also added MPC design parameters

--- a/control/control.tex
+++ b/control/control.tex
@@ -43,7 +43,7 @@
     \paragraph
     In this chapter, an overview of the different controllers will be given and the design process of each controller will be explained.
     A MATLAB/Simulink simulation environment will also be introduced to test these controllers.
-    The controllers will be tested in simulations with different system paramaters and with distrubances.
+    The controllers will be tested in simulations with different system paramaters and with disturbances.
     Finally, the simulation results will be shown and discussed.
     
     \input{control/pid}
