--- a/control/pid.tex
+++ b/control/pid.tex
@@ -80,7 +80,7 @@
         % ?? Input figure of the angular rate step response
 
         \paragraph
-        For a \SI{1}{\radian/\second} step responce, the pitch rate controllers result in a 
+        For a \SI{1}{\radian/\second} step response, the pitch rate controllers result in a 
         3.6~\% overshoot, 
         \SI{0.024}{\second} rise time, 
         \SI{0.8}{\second} for a 2~\% settling time, 
