--- a/system_id/havok.tex
+++ b/system_id/havok.tex
@@ -13,7 +13,7 @@
     \paragraph
     The original formulation of \gls{HAVOK} is only defined for uncontrolled dynamical systems \cite{Brunton2017a}.
     In this work, we have adapted the standard \gls{HAVOK} algorithm to account for the effect of control.
-    This implementation well be refered to as \gls{HAVOKc} 
+    This implementation well be referred to as \gls{HAVOKc} 
     \gls{HAVOKc} results in a discrete, linear model that approximates the behaviour of a controlled dynamical system.
     In this section, a brief overview is provided of this implementation of \gls{HAVOKc}.
     
